# paper-relay

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES_v0.0.1.md  TODO.md  architecture.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_share_links.py  003_add_share_link_expiration.py  004_add_progress_tracking.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  auth.py  export.py  papers.py  share.py
backend/app/core/: config.py  limiter.py  security.py
backend/app/models/: __init__.py  analysis.py  database.py  paper.py  share.py  user.py
backend/app/schemas/: auth.py  paper.py
backend/app/services/: ai_processor.py  analysis_pipeline.py  auth.py  email.py  export_service.py  ingestion.py  knowledge_graph.py  paper_analysis.py  pdf_parser.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_export.py  test_papers.py  test_share.py
backend/tests/services/: test_ai_processor.py  test_export_service.py  test_ingestion.py  test_knowledge_graph.py  test_pdf_parser.py
backend/tests/workers/: test_tasks.py
docs/: API.md
docs/superpowers/plans/: 2026-04-05-backend-pipeline-expansion.md  2026-04-06-frontend-phases-3-7.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  test-setup.ts  theme.ts
(+41 files in other folders)
